command-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cmd-pod
  labels:
    purpose: demonstrate-command
spec:
  containers:
    - name: cmd-container
      image: debian
      # to pass command to docker EntryPoint 
      command: ["printenv"]  
      # passing argument to EntryPoint same as CMD
      args: ["HOSTNAME", "KUBERNETES_PORT"] 
  restartPolicy: onFailure
