environment-pod.yml
apiVersion: v1
kind: Pod
metadata:
   name: env-pod
   labels:
      purpose: demonstrate-envars
spec:
   containers:
      - name: env-container
        image: alpine
