jenkins-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # creationTimestamp is for time stamping a deployment during the creation
  creationTimestamp: null
  name: jenkins-deployment
  labels:
    app: jenkins-deployment
  namespace: jenkins-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-app
      tier: frontend
  # strategy is used for deployment strategy 
  strategy: 
      type: RollingUpdate
      rollingUpdate:
          maxSurge: 1
          maxUnavailable: 0
  template:
    metadata:
      # creationTimestamp is for time stamping a deployment during the creation of pod
      creationTimestamp: null
      labels:
        app: jenkins-app
        tier: frontend
    spec:
      containers:
      - image: jenkins/jenkins:jdk11
        name: jenkins
        resources: {}
        ports:
          - containerPort: 8080
            name: jenkins 
        volumeMounts: 
          - name: jenkins-volume
            mountPath: /var/jenkins_home
      volumes: 
        - name: jenkins-volume
          persistentVolumeClaim:
            claimName: jenkins-pv-claim


# status is used for deployment status 
status: {}
