jenkins-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  creationTimestamp: null
  labels:
    app: jenkins-service
  namespace: jenkins-lab
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: jenkins-app
    tier: frontend
  type: ClusterIP
