Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-lab
spec:
  rules:
  - host: "jenkins.com"
    http:
      paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: jenkins-service
              port: 
                number: 8080
