ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins-lab
spec:
  rules:
  # - host: "dineshtamang.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: jenkins-service
              port:
                number: 80
